--- a/templates/calls.html
+++ b/templates/calls.html
@@ -82,9 +82,17 @@
             <td class="nowrap" title="{{ entry.timestamp }}">{{ entry.timestamp[8:10] }}/{{ entry.timestamp[5:7] }} {{ entry.timestamp[11:16] }}</td>
             <td>
                 {% if entry.direction == 'inbound' %}
-                    <span class="badge badge-inbound" title="In entrata">&#8595;</span>
+                    <span class="badge badge-inbound" title="In entrata">
+                        <svg width="16" height="16" fill="currentColor">
+                            <use href="#icon-inbound"></use>
+                        </svg>
+                    </span>
                 {% else %}
-                    <span class="badge badge-outbound" title="In uscita">&#8593;</span>
+                    <span class="badge badge-outbound" title="In uscita">
+                        <svg width="16" height="16" fill="currentColor">
+                            <use href="#icon-outbound"></use>
+                        </svg>
+                    </span>
                 {% endif %}
             </td>
             <td>
