corretto pagina chiamate: simbolo pagina avanti e pagina indietro

--- a/templates/calls.html
+++ b/templates/calls.html
@@ -135,7 +135,11 @@
             </td>
             <td class="nowrap">
                 {% if entry.answered and entry.duration %}
-                    {{ entry.duration }}s
+                    {% if entry.duration >= 60 %}
+                        {{ entry.duration // 60 }}m {{ entry.duration % 60 }}s
+                    {% else %}
+                        {{ entry.duration }}s
+                    {% endif %}
                 {% else %}
                     <span class="text-muted">-</span>
                 {% endif %}
@@ -167,12 +171,20 @@
 <div class="pagination">
     {% if page > 1 %}
         <a href="{{ url_for('call_log_page', page=page - 1, direction=direction, number=number, ext=ext, date_from=date_from, date_to=date_to) }}"
-           class="btn btn-secondary btn-small">&larr; Precedente</a>
+           class="btn btn-secondary btn-small">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8"/>
+            </svg>
+        </a>
     {% endif %}
     <span class="page-info">Pagina {{ page }} di {{ total_pages }}</span>
     {% if page < total_pages %}
         <a href="{{ url_for('call_log_page', page=page + 1, direction=direction, number=number, ext=ext, date_from=date_from, date_to=date_to) }}"
-           class="btn btn-secondary btn-small">Successiva &rarr;</a>
+           class="btn btn-secondary btn-small">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+            </svg>
+        </a>
     {% endif %}
 </div>
 {% endif %}
