visualizza i numeri in rubrica in formato nazionale

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,9 @@
             <td>{{ contact.displayName }}</td>
             {# Numeri cliccabili: avviano click-to-dial tramite il centralino UCM #}
             <td>
-                <a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber }}'); return false;">{{ contact.telephoneNumber }}</a>
+                <a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber }}'); return false;">{{ contact.telephoneNumber|format_phone }}</a>
                 {% if contact.telephoneNumber2 %}
-                    <br><a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber2 }}'); return false;">{{ contact.telephoneNumber2 }}</a>
+                    <br><a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber2 }}'); return false;">{{ contact.telephoneNumber2|format_phone }}</a>
                 {% endif %}
             </td>
             <td class="actions">
