--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <tr>
             <td>{{ contact.displayName }}</td>
             {# Numeri cliccabili: avviano click-to-dial tramite il centralino UCM #}
-            <td>
+            <td {% if contact.telephoneNumber2 %} class="phone-doppio"{% endif %}>
                 <a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber }}'); return false;">{{ contact.telephoneNumber|format_phone }}</a>
                 {% if contact.telephoneNumber2 %}
                     <br><a href="#" class="phone-link" onclick="clickToDial('{{ contact.telephoneNumber2 }}'); return false;">{{ contact.telephoneNumber2|format_phone }}</a>
